fix class names

--- a/HW4/index.html
+++ b/HW4/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="mysite">My simple website</div>
+    <div class="title">My simple website</div>
     <p> <img src="img\sunset.jpg" alt="sunset" class="sunset"> </p>
     <p class="text">Lorem ipsum dolor sit, amet consectetur <em> adipisicing elit.</em>
         Eaque cum, totam tempora provident iusto saepe, facilis fuga animi odit
@@ -19,11 +19,11 @@
         facilis fuga animi <a href="#">odit magni ab nam perspiciatis</a> itaque. Corporis libero
         veritatis temporibus saepe minus.</p>
     <p class="cars">
-        <img src="img\car01.jpg" alt="porsche" class="border4cars">
-        <img src="img\car02.jpg" alt="mitsubishi" class="border4cars">
-        <img src="img\car03.jpg" alt="audi" class="border4cars">
-        <img src="img\car04.jpg" alt="bmw" class="border4cars">
-        <img src="img\car05.jpg" alt="volvo" class="border4cars">
+        <img src="img\car01.jpg" alt="porsche" class="border">
+        <img src="img\car02.jpg" alt="mitsubishi" class="border">
+        <img src="img\car03.jpg" alt="audi" class="border">
+        <img src="img\car04.jpg" alt="bmw" class="border">
+        <img src="img\car05.jpg" alt="volvo" class="border">
     </p>
     <p class="text"> <a href="#">Lorem ipsum dolor </a>sit amet consectetur adipisicing elit. Accusamus vitae
         explicabo error
