--- a/HW6/first/index.html
+++ b/HW6/first/index.html
@@ -20,24 +20,33 @@
                     <li>
                         <label for="pickles" class="Shopping-list">
                             <input type="checkbox" id="pickles" name="pickles" value="Pickles">
-                            <span>A lot of pickles</span>
+                            <span>A lot of pickles
+                                <span class="content-in-brackets">for the next lessons about CSS
+                                </span>
+                            </span>
                         </label>
                     </li>
                     <li>
                         <label for="apples" class="Shopping-list">
                             <input type="checkbox" id="apples" name="apples" value="Apples">
-                            <span>10 apples</span>
+                            <span>10 apples<span class="content-in-brackets">
+                                    or more CSS manipulations
+                                </span></span>
                         </label>
                     </li>
                     <li>
                         <label for="oranges" class="Shopping-list">
                             <input type="checkbox" id="oranges" name="oranges" value="Pickles">
-                            <span>20 oranges</span>
+                            <span>20 oranges<span class="content-in-brackets">
+                                    because they are awesome
+                                </span></span>
                         </label>
                     </li>
                     <li> <label for="plates" class="Shopping-list">
                             <input type="checkbox" id="plates" name="plates" value="Apples">
-                            <span>13 plates</span>
+                            <span>13 plates<span class="content-in-brackets">
+                                    hm... they always disappear
+                                </span></span>
                         </label>
                     </li>
                     <li>
@@ -49,7 +58,9 @@
                     <li>
                         <label for="bottle" class="Shopping-list">
                             <input type="checkbox" id="bottle" name="bottle" value="Bottle">
-                            <span>1 bottle of Sake ^_^</span>
+                            <span>1 bottle of Sake ^_^
+                                <span class="content-in-brackets"> for my friends
+                                </span></span>
                         </label>
                     </li>
                 </ul>
