--- a/HW10/1/index.html
+++ b/HW10/1/index.html
@@ -13,7 +13,7 @@
         <header class="header">
             <div class="title">
                 <div class="header__logo">
-                    <img src="/images/logo.png" alt="logo">
+                    <img src="images/logo.png" alt="logo">
                 </div>
                 <nav class="header__nav">
                     <ul class="nav__list">
